--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
+    <script src="libs/jsnlog.js"></script>
+    <script src="libs/preloadjs-0.6.2.combined.js"></script>
+    <script src="libs/soundjs-0.6.2.combined.js"></script>
     <script src="build/build-0.0.1.js"></script>
 </head>
 <body>
