--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="libs/jsnlog.js"></script>
     <script src="libs/preloadjs-0.6.2.combined.js"></script>
     <script src="libs/soundjs-0.6.2.combined.js"></script>
+    <script src="libs/pixi.js"></script>
     <script src="build/build-0.0.1.js"></script>
 </head>
 <body>
