* fixed some stuff so the rendering actually works * added RenderObjectReference object for updating the sprite automatically

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <script src="libs/preloadjs-0.6.2.combined.js"></script>
     <script src="libs/soundjs-0.6.2.combined.js"></script>
     <script src="libs/pixi.js"></script>
+    <script src="libs/pixi-display.js"></script>
     <script src="build/build-0.0.1.js"></script>
+    <style type="text/css">
+        body, html{
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            text-align: center;
+            background: black;
+        }
+    </style>
 </head>
 <body>
 
